fix padding overlapping of padding circles

--- a/src/pages/index-page/_feedbacks.scss
+++ b/src/pages/index-page/_feedbacks.scss
@@ -92,6 +92,7 @@
     user-select: none;
     cursor: pointer;
     border: 5px solid $color-light-gray-2;
+    background-color: white;
     padding: 16px;
     box-sizing: border-box;
 
